<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/silvergliter_640x424">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_problem"
        android:textColorHint="@color/brown"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:textColorHint="@color/brown"
            android:fontFamily="casual"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/wifi_not_connected" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/connect"
        android:textColorHint="@color/brown"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:background="@drawable/selectorforall"
        android:textAllCaps="false"/>
</LinearLayout>